# steve

./: .gitignore  Cargo.toml  goal.md  readme.md  self-host.md  syntax.stv  todo.md
parser/: Cargo.toml
parser/src/: ast.rs  ast_nodes.rs  context.rs  diag.rs  idx.rs  into_nodes.rs  lexer.rs  lib.rs  meta.rs  names.rs  node.rs  parser.rs  preproc.rs  scopes.rs  src_loc.rs  str_pool.rs  token.rs  typecheck.rs
parser/src/ast/: data.rs  mem.rs  mod.rs
parser/src/parser/: into_mem.rs  mod.rs  parse_nodes.rs
